# Road-damage-detection

./: .gitignore  README.md  api.py  evaluate.py  main.py  pyproject.toml  train.py
scripts/: download_data.py
